fix (login): reduce unnecessary gaps, set a better downsize scaling

--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -816,7 +816,7 @@ input[type=checkbox] {
   align-items: center;
   flex-direction: column;
   gap: 8px;
-  padding: 1% 1%;
+  padding: 2% 1%;
   height: auto;
   width: min(700px, 90%);
 }
@@ -829,12 +829,11 @@ input[type=checkbox] {
 }
 .card-landing__signup {
   justify-content: space-between;
-  height: min(700px, 90%);
 }
 
 @media screen and (max-width: 992px) {
-  .card-landing {
-    margin: 10% 0 10% 0;
+  .card-landing__login {
+    margin: 10% 0 5% 0;
     height: min(420px, 90%);
   }
 }
@@ -2016,7 +2015,7 @@ form {
 
 .validation {
   font-family: "Inter";
-  font-size: 13px;
+  font-size: 1rem;
   font-weight: 400;
   line-height: 120%;
   color: #ff8190;
@@ -2051,10 +2050,9 @@ form > .input-container {
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
-  gap: 8px;
+  gap: 4px;
   height: auto;
   width: 100%;
-  min-height: 78.19px;
 }
 form > .input-container:nth-of-type(5) {
   min-height: 0;
@@ -2171,7 +2169,7 @@ input[type=checkbox]:checked:hover {
 }
 @media screen and (max-width: 480px) {
   form {
-    gap: 14px !important;
+    gap: 8px !important;
   }
   input {
     font-size: 1rem !important;
@@ -3946,13 +3944,7 @@ form > select {
   width: 100%;
 }
 
-/*   .grid {
-    grid-template-rows: 15% 75% 10%;
-  } */
 .card-landing__signup {
-  margin: 8% 0 0 0;
-  max-height: max(50%, 660px);
-  height: 100%;
   justify-content: unset;
   align-items: unset;
 }
@@ -3997,9 +3989,6 @@ form {
   }
 }
 @media screen and (max-width: 600px) {
-  /*   .grid {
-      grid-template-rows: 10% 75% 10%;
-    } */
   .join-logo-signup > img {
     top: -40%;
   }
@@ -4017,7 +4006,6 @@ form {
     justify-content: unset;
   }
   .form-signup > .input-container > .login-error {
-    font-size: 11px;
     height: 6px;
     margin: unset;
   }
@@ -4114,7 +4102,7 @@ body {
 
 .text-to-signup {
   font-family: "Inter";
-  font-size: 1.25rem;
+  font-size: clamp(1rem, 1.25rem, 1vw);
   font-weight: 400;
   line-height: 120%;
   height: auto;
@@ -4152,7 +4140,7 @@ body {
   height: 100%;
   width: 100%;
   background-color: #f6f7f8;
-  position: absolute;
+  position: fixed;
 }
 
 .background-fade-dark {
@@ -4172,19 +4160,27 @@ body {
   }
 }
 @media (max-width: 600px) {
-  #login-view {
-    grid-template-areas: "void" "main" "header" "footer";
-    grid-template-rows: 15% 1fr 5% 5%;
+  .grid__login {
     gap: 16px;
+    grid-template-areas: "void" "main" "header" "footer" !important;
+    grid-template-rows: 15% 1fr 10% 10% !important;
+  }
+  .grid__signup {
+    gap: 16px;
+    grid-template-areas: "void" "main" "header" "footer" !important;
+    grid-template-rows: 15% 1fr 0% 5% !important;
   }
   .join-logo-login {
     max-width: 60px;
     max-height: 60px;
   }
   .header-index {
-    padding: 0 24px;
     margin: unset;
+    padding: unset;
     justify-content: center;
+  }
+  .headline-container-login {
+    gap: 8px;
   }
   .signup-container {
     gap: 24px;
@@ -4208,7 +4204,11 @@ body {
   }
 }
 @media screen and (max-width: 380px) {
+  .site-container {
+    width: 90%;
+  }
   .signup-container {
+    justify-content: space-around;
     gap: 8px;
   }
   .join-logo-login > img {
