--- a/styles/scss/pages/_login.scss
+++ b/styles/scss/pages/_login.scss
@@ -44,7 +44,7 @@ body {
   @include dFlex($fd: row, $jc: space-between);
   @include padding($p: 24px);
   height: auto;
-  margin: 40px 0 0 0 ;
+  margin: 40px 0 0 0;
 }
 
 .headline-container-login {
@@ -70,7 +70,7 @@ body {
   gap: 35px;
 }
 .text-to-signup {
-  @include font($fs: 1.25rem);
+  @include font($fs: clamp(1rem, 1.25rem, 1vw));
   @include size($w: 180px);
 }
 .btn-primary {
@@ -96,17 +96,17 @@ body {
   height: 100%;
   width: 100%;
   background-color: #f6f7f8;
-  position: absolute;
+  position: fixed;
 }
 
 .background-fade-dark {
   position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: #2a3647;
-    z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #2a3647;
+  z-index: -1;
 }
 
 @media screen and (max-width: 992px) {
@@ -117,14 +117,23 @@ body {
 }
 
 @media (max-width: 600px) {
-  #login-view {
+  .grid__login {
+    gap: 16px;
     grid-template-areas:
       "void"
       "main"
       "header"
-      "footer";
-    grid-template-rows: 15% 1fr 5% 5%;
+      "footer" !important;
+    grid-template-rows: 15% 1fr 10% 10% !important;
+  }
+  .grid__signup {
     gap: 16px;
+    grid-template-areas:
+      "void"
+      "main"
+      "header"
+      "footer" !important;
+    grid-template-rows: 15% 1fr 0% 5% !important;
   }
 
   .join-logo-login {
@@ -133,9 +142,13 @@ body {
   }
 
   .header-index {
-    padding: 0 24px;
     margin: unset;
+    padding: unset;
     justify-content: center;
+  }
+
+  .headline-container-login {
+    gap: 8px;
   }
 
   .signup-container {
@@ -159,7 +172,11 @@ body {
 }
 
 @media screen and (max-width: 380px) {
+  .site-container {
+    width: 90%;
+  }
   .signup-container {
+    justify-content: space-around;
     gap: 8px;
   }
   .join-logo-login {
